# sqlmind

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  dialects.yaml  pyproject.toml  sqlmind.py  sqlmind_graph.py  sqlmind_mcp_server.py
.github/workflows/: ci.yml
examples/: schema.sqlmind.yaml
integrations/: sqlmind_google_adk.py  sqlmind_langgraph.py  sqlmind_openai_agents.py
scripts/: setup_repo.sh
tests/: test_dialects.py  test_graph.py
