[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlmind"
version = "0.1.0"
description = "SQL intelligence layer for LLM agents — phase-locked generation, property graph schema, 9-dialect support"
authors = [{ name = "VeloceAI", email = "veloceai369@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
keywords = ["sql", "llm", "agent", "text-to-sql", "adk", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0",
    "sqlglot>=26.0",
    "fastmcp>=2.0",
]

[project.optional-dependencies]
db       = ["sqlalchemy>=2.0"]
graph    = ["networkx>=3.0"]
adk      = ["google-adk>=1.0"]
openai   = ["openai-agents>=0.1"]
langraph = ["langgraph>=0.3", "langchain>=0.3", "langchain-openai>=0.2"]
anthropic = ["langchain-anthropic>=0.3"]
all      = ["sqlmind[db,graph,adk,openai,langraph,anthropic]"]
dev      = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.4"]

[project.scripts]
sqlmind = "sqlmind_graph:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
